--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@picocss/pico": "^2.1.1",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
+    "luxon": "^3.7.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   }
